# Pigment

./: CONTRIBUTING.md  Pigment.doap  README.md  com.jeffser.Pigment.json  meson.build  translation_tool.sh  update_translation_files.sh
.github/: FUNDING.yml
data/: com.jeffser.Pigment.desktop.in  com.jeffser.Pigment.gschema.xml  com.jeffser.Pigment.metainfo.xml.in  com.jeffser.Pigment.service.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES.in  ar.po  bn.po  cs.po  de.po  es.po  es.po~  fa.po  hi.po  meson.build  nl.po  oc.po  pigment.pot  pt_BR.po  te.po
src/: color_converters.py  main.py  meson.build  pigment.gresource.xml  pigment.in  style.css  widgets.py  window.py  window.ui
src/gtk/: help-overlay.ui
src/ui/: preferences.blp  shortcuts.blp  window.blp
